samples/_failures_safe/1761170321_db1fa5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f28c15ed.c: In function ‘calculate_stats’:
./samples/SAFE/__tmp_f28c15ed.c:115:87: error: expected ‘)’ at end of input
  115 |         analyzer->stats.most_frequent_level[sizeof(analyzer->stats.most_frequent_level
      |                                                   ~                                   ^
      |                                                                                       )
./samples/SAFE/__tmp_f28c15ed.c:115:9: error: expected declaration or statement at end of input
  115 |         analyzer->stats.most_frequent_level[sizeof(analyzer->stats.most_frequent_level
      |         ^~~~~~~~
./samples/SAFE/__tmp_f28c15ed.c:115:9: error: expected declaration or statement at end of input
